fix(model-store-card): align elements

--- a/src/widgets/model-store/ui/ModelsDetailsPage/ModelsDetailsPage.module.scss
+++ b/src/widgets/model-store/ui/ModelsDetailsPage/ModelsDetailsPage.module.scss
@@ -24,11 +24,11 @@
 }
 
 .file-list-wrapper {
-  height: calc(100vh - 360px);
+  height: calc(100vh - 352px);
 }
 
 .with-vision .file-list-wrapper {
-  height: calc(100vh - 404px);
+  height: calc(100vh - 396px);
 }
 
 .files-list {
